Fix package.json main entry

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-onsenui-es",
   "version": "1.4.0",
   "description": "",
-  "main": "react-onsenui.js",
+  "main": "react-onsenui.esm.js",
   "module": "react-onsenui.esm.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
